--- a/app_header/0_HeaderMainApp/HeaderMainApp.module.css
+++ b/app_header/0_HeaderMainApp/HeaderMainApp.module.css
@@ -5,6 +5,12 @@
   padding: 2rem 1rem;
 }
 
+@media (max-width: 900px) {
+  .header {
+    flex-direction: column;
+  }
+}
+
 @media (min-width: 768px) {
   .header {
     padding: 2rem 10%;
