--- a/app_header/2_logo/LogoHeaderApp.module.css
+++ b/app_header/2_logo/LogoHeaderApp.module.css
@@ -18,3 +18,10 @@
   object-fit: contain;
   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.5));
 }
+
+@media(max-width: 1100px) {
+  .logo {
+    flex-direction: column;
+    gap: 0rem;
+  }
+}
