--- a/app_header/3_nav_bar/0_NavBarHeaderApp/NavBarHeaderApp.module.css
+++ b/app_header/3_nav_bar/0_NavBarHeaderApp/NavBarHeaderApp.module.css
@@ -4,6 +4,22 @@
   padding: 0;
   display: flex;
   gap: 1.5rem;
-  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.25rem;
+}
+
+@media (max-width: 900px) {
+  .nav {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 500px) {
+  .list {
+    flex-direction: column;
+  }
+
+  .item {
+    text-align: center;
+  }
 }
