--- a/page_meals/1_header/HeaderMealsPage.module.css
+++ b/page_meals/1_header/HeaderMealsPage.module.css
@@ -49,3 +49,19 @@
     color: #e9e9e9;
   }
 }
+
+@media (max-width: 900px) {
+  .header {
+    text-align: center;
+  }
+
+  .header p {
+    margin: 15px auto;
+  }
+}
+
+@media (max-width: 500px) {
+  .header p {
+    font-size: 20px;
+  }
+}
