--- a/page_meals/2_grid/GridMealsPage.module.css
+++ b/page_meals/2_grid/GridMealsPage.module.css
@@ -1,10 +1,9 @@
 .meals {
-  width: 90%;
-  max-width: 90rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  grid-gap: 5rem;
-  margin: 2rem auto;
+  max-width: 1310px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
   list-style: none;
-  padding: 0;
+  margin: 0 auto 30px;
 }
