--- a/app/meals/page.module.css
+++ b/app/meals/page.module.css
@@ -1,7 +1,7 @@
 
+/* 
 
-
-/* .header {
+.header {
   gap: 3rem;
   margin: 3rem auto 5rem auto;
   width: 90%;
@@ -34,7 +34,7 @@
   color: #ffffff;
   font-weight: bold;
   text-decoration: none;
-}
+} */
 
 .loading {
   text-align: center;
@@ -51,4 +51,4 @@
   100% {
     color: #e9e9e9;
   }
-} */
+}
