--- a/page_meals_slug/1_header/HeaderSlugMealsPage.module.css
+++ b/page_meals_slug/1_header/HeaderSlugMealsPage.module.css
@@ -5,12 +5,6 @@
   margin: auto;
   max-width: 80rem;
 }
-/* 
-.image {
-  position: relative;
-  width: 30rem;
-  height: 20rem;
-} */
 
 .header img {
   object-fit: cover;
@@ -128,10 +122,17 @@
   .header {
     flex-direction: column;
     align-items: center;
+    padding: 0px;
+    gap: 0px;
   }
 
   .headerText {
     text-align: center;
+    padding: 30px 0px;
+  }
+
+  .headerText p {
+    margin-top: 15px;
   }
 }
 
