--- a/page_meals_slug/2_main/MainSlugMealsPage.module.css
+++ b/page_meals_slug/2_main/MainSlugMealsPage.module.css
@@ -7,8 +7,8 @@
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
   padding: 2rem;
   max-width: 60rem;
-  margin: 2rem auto;
   animation: fade-slide-in-from-bottom 1s ease-out forwards;
+  margin: 0px auto 30px;
 }
 
 @keyframes fade-slide-in-from-bottom {
