--- a/page_share/2_from/1_image_picker/ImagePickerSharePage.module.css
+++ b/page_share/2_from/1_image_picker/ImagePickerSharePage.module.css
@@ -1,10 +1,3 @@
-.controls {
-  display: flex;
-  align-items: flex-start;
-  gap: 1.5rem;
-  margin-bottom: 1rem;
-}
-
 .picker .input {
   display: none;
 }
@@ -21,6 +14,13 @@
 .picker .button:hover,
 .picker .button:focus {
   background: #b3b9c6;
+}
+
+.controls {
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .preview {
@@ -42,4 +42,12 @@
 
 .preview img {
   object-fit: cover;
+}
+
+@media (max-width: 1000px) {
+  .controls {
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 30px;
+  }
 }
