--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,11 @@ body {
   font-weight: 500;
   color: #ddd8d8;
 }
+
+@media (max-width: 700px) {
+  .not-found h1,
+  .error h1 { 
+    font-size: 30px;
+  }
+
+}
